fixed card drag overflow hidden bug by cloning the card outside of the list

--- a/App/Views/Board/Kanban/kanban.less
+++ b/App/Views/Board/Kanban/kanban.less
@@ -18,33 +18,37 @@ body{overflow:hidden;}
 }
 
 /* lists ///////////////////////////////////////// */
-.kanban .lists {overflow:hidden;
-    .columns{white-space:nowrap;
-        & > .col{width:250px; border-radius:4px; margin-right:7px; margin-bottom:30px; height:auto;
+.kanban {overflow:hidden;
+    .lists .columns{white-space:nowrap;
+        & > .col{min-width:238px; border-radius:4px; margin-right:7px; margin-bottom:30px; height:auto;
             &.bg{box-shadow:@shadow;}
         }
         & > .add-list{
             a{width:100%; box-sizing:border-box; font-weight:400;}
         }
     }
+
     .list { position:relative; background-color:#e9e9e9; 
         .items{float:left; position:relative; padding:0 4px;
             .drag{position:relative;}
             &.hovering{height:40px;}
         }
-        .item{box-shadow:@shadow-sm; border-radius:4px; background-color:#ffffff; padding:8px 20px 8px 8px; margin:7px 0; overflow:hidden; cursor:pointer;
+        .item{width:216px; box-shadow:@shadow-sm; border-radius:4px; background-color:#ffffff; padding:8px 20px 8px 8px; margin:7px 0; overflow:hidden; cursor:pointer;
             .title{font-size:15px; font-weight:400; line-height:1.5; white-space:normal; width: 100%; display: inline-block;}
             &.dragging{transform:rotate(7deg); z-index:100; box-shadow:@shadow;}
         }
+        .list-items{position:relative;}
+        .movable{position:relative; max-width:224px;}
+        .movable:after{content:'';display:block;clear:both;}
         .scroller{position:relative; float:right; background-color:rgba(0,0,0,0.05); width:10px; height:100%; overflow:hidden; border-radius:10px; margin-top:7px;}
         .scrollbar{position:relative; background-color:rgba(0,0,0,0.1); width:10px; min-height:20px; overflow:hidden; border-radius:10px;}
-        .scrollable{overflow:hidden;
+        .scrollable{overflow:hidden; max-width:224px;
             .scroller{display:none;}
             &:after{content:' '; display:block; clear:both; height:0; overflow:hidden;}
-            &.scroll{
+            &.scroll{ max-width:234px;
                 .items{float:left; width:224px;}
                 .item{padding-right:8px;}
-                .scroller{display:block;}
+                .scroller{display:block;} 
             }
         }
         &.hovering{
@@ -58,6 +62,9 @@ body{overflow:hidden;}
         &.hovering.downward{padding-bottom:50px !important;}
     }
 }
+
+/* list used for cloning card while dragging */
+.kanban > .list{position:absolute;width:0;height:0;}
 
 .kanban {
     & > .scroller{position:relative; background-color:rgba(0,0,0,0.05); top: -21px; left:10px; width:~"calc(100% - 20px)"; height:13px; overflow:hidden; border-radius:10px;
